# SkunkyRayMarchEngine

./: .gitattributes  CMakeLists.txt  RayMarchEngine.kdev4
.github/workflows/: WindowsBuild.yml
.kdev4/: RayMarchEngine.kdev4
Shaders/: CombineSDF.incl  Default.vs  Mandelbulb.incl  RayMarch.fs  SceneDE.incl  Scenes.incl  hsv.incl  simpleObjects.incl
Source/: GLGameCore.cpp  GLGameCore.hpp  glad.c  main.cpp  shader.cpp  shader.h
Source/SDFModel/: SDFFileSpecification  SDFModel.cpp  SDFModel.hpp  SDFTransform.hpp
Source/SDFModel/Modifiers/: Modifier.cpp  Modifier.hpp
Source/SDFModel/Primitives/: SDFBox.cpp  SDFBox.hpp  SDFObject.hpp  SDFSphere.cpp  SDFSphere.hpp
include/glad/: glad.h
